--- a/package.json
+++ b/package.json
@@ -16,12 +16,16 @@
     },
     "license": "MIT",
     "dependencies": {
+        "axios": "^1.3.4",
         "classnames": "^2.3.2",
         "eslint": "8.35.0",
         "eslint-config-next": "13.2.3",
+        "isemail": "^3.2.0",
+        "mongodb": "^5.1.0",
         "next": "13.2.3",
         "react": "18.2.0",
         "react-dom": "18.2.0",
+        "react-hook-form": "^7.43.5",
         "sass": "^1.58.3"
     }
 }
